<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtSaySentenceTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#CDDC39"
                android:text="@string/txtSaySentenceTitle"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/txtSaySentence"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="text"
                android:ems="10"
                android:hint="@string/txtSaySentenceHint"
                android:inputType="textMultiLine|textPersonName"
                android:labelFor="@id/btnSay"
                android:lineSpacingMultiplier="2"
                android:lines="5"
                android:textAlignment="textStart" />

            <Button
                android:id="@+id/btnSay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btnSay" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtSayLanguageOptionsTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#CDDC39"
                android:text="@string/txtLanguageOptionsTitle"
                android:textSize="16sp" />

            <Spinner
                android:id="@+id/spinSayLanguage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Spinner
                android:id="@+id/spinSayRegion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Spinner
                android:id="@+id/spinSayBodyLanguage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/btnSayOptionSet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btnLanguageOptionsSet" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>